--- a/senai-exam-crud/src/main/resources/application.properties
+++ b/senai-exam-crud/src/main/resources/application.properties
@@ -5,4 +5,17 @@ quarkus.datasource.password=postgres
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5433/senai-crud-db
 
 # drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.database.generation=create
+
+viacep-service-base-url/mp-rest/url=http://viacep.com.br/ws
+viacep-service-base-url/mp-rest/scope=javax.inject.Singleton
+
+mp.jwt.verify.publickey.location=publickey.pem
+mp.jwt.verify.issuer=https://bastret.com
+quarkus.smallrye-jwt.enabled=true
+# for jwt expiration duration
+com.senai.users.jwt.duration=3600
+
+com.senai.users.password.secret=mysecret
+com.senai.users.password.iteration=33
+com.senai.users.password.keylength=256
